feat: added GetMySubmissions
